Fix overflow width on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 300;
+    overflow-x: hidden;
 }
 
 h2 {
